src/objects/Proposed_Rescheduling__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DurationInMinutes__c</fullName>
        <label>DurationInMinutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Eventid__c</fullName>
        <label>Eventid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <label>Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PatientId__c</fullName>
        <label>PatientId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_New_Date__c</fullName>
        <label>Proposed New Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reschedule_reason__c</fullName>
        <label>Reschedule reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <label>StartDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Trial__c</fullName>
        <label>Trial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Clinic Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radiology Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Surgery Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgery Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lab Visit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WhatId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WhatId</label>
        <referenceTo>Patient_Custom__c</referenceTo>
        <relationshipLabel>Proposed Rescheduling</relationshipLabel>
        <relationshipName>Proposed_Rescheduling</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>refId__c</fullName>
        <label>refId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <picklist>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>studyStaff__c</fullName>
        <label>studyStaff</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subject__c</fullName>
        <label>subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Proposed Rescheduling</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Eventid__c</columns>
        <columns>Proposed_New_Date__c</columns>
        <columns>StartDateTime__c</columns>
        <columns>refId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Proposed Resch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposed Rescheduling</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>